22Mar05=======================================================================
1. fixed sh/c/node sh/c/a and sh/newc/n.
21Mar05=======================================================================
1. log AGW port on connection
2. merge in latest (2Mar2005) cty.dat 
3. fix command searching so it does not pick up false positives for commands
with / in them in directories that don't have that.
4. Important security change.
5. add missing input filter for WWV
16Mar05=======================================================================
1. make the correct correction to the DL entry in wpxloc.raw (left out the
'N' of 'North' in the latitude).
2. Severely reduce the dupes caused by some of the badly configured / written
spot suckers out there. 
13Mar05=======================================================================
1. There has been a mix up in the Aranea1 branch. I have managed to merge a
change that I have been meaning to do for ages. I have now made that change
here.
27Feb05=======================================================================
1. fix duping on bad spot suckers that copy the prefix that is put at the end
of the comment section by AR-C nodes becoming the whole comment. 
26Feb05=======================================================================
1. Added show/grayline command from Steve K9AN. This is also aliased to
show/greyline :-)
2. fix spot dupe ambiguity on spotter having an SSID (remove it).
25Feb05=======================================================================
1. Changed the way spot deduping is done. This is likely to make deduping much
stricter. In essence a person cannot spot the same call on the same frequency
more than once an hour (configurable) unless he makes a (non-duped) comment
as well. 
2. Added Swains Island
3. Added TO4G for Glorioso 
19Feb05=======================================================================
1. changed ssb allocation on 40m to add missing 5Khz.